<resources>
    <string name="app_name">Aquarium Start</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="fishes">Fishes</string>
    <string name="plants">Plants</string>
    <string name="gallery">Gallery</string>
    <string name="shops">Shops</string>
    <string name="tools">Tools</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_tools">Tools</string>
    <string name="title_activity_fishes">Fishes</string>
    <string name="title_activity_plants">Plants</string>
    <string name="title_activity_shops">Shops</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="demo">DEMO</string>
    <string name="projekt_tomasz_matysiak">Projekt: Tomasz Matysiak</string>
    <string name="app_welcome">AQUARIUM START</string>
    <string name="welcome_in">Welcome in</string>
    <string name="total_price">Total price</string>
    <string name="quantity">Quantity</string>
    <string name="biology_name">Biology name</string>
    <string name="name_animal">Name</string>
    <string name="title_activity_maps_shops">Map</string>
</resources>
