<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/item_imgAnimal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/item_NameAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/item_imgAnimal"
        android:layout_marginStart="14dp"
        android:text="@string/name_animal"
        android:textAlignment="center"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/item_BiologyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/item_NameAnimal"
        android:layout_below="@+id/item_NameAnimal"
        android:text="@string/biology_name"
        android:textAlignment="center"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/item_Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/item_BiologyName"
        android:layout_below="@+id/item_BiologyName"
        android:text="@string/quantity"
        android:textAlignment="center"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/item_TotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/item_Quantity"
        android:layout_below="@+id/item_Quantity"
        android:text="@string/total_price"
        android:textAlignment="center"
        android:textSize="17sp" />

</RelativeLayout>