<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#304ffe"
    tools:context="com.designer.app.tm.aquariumstart.WelcomeScreen">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_welcome"
        android:textColor="#212121"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="284dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_in"
        android:textColor="#212121"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="238dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:textColor="#fafafa"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:text="@string/demo" />


</RelativeLayout>
