<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_animal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196f3"
    tools:context="com.designer.app.tm.aquariumstart.AddAnimal">

    <ImageView
        android:id="@+id/img_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/placeholder" />

    <ImageButton
        android:id="@+id/btn_img_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="215dp"
        app:srcCompat="@drawable/ic_add_a_photo_black_48dp"
        android:contentDescription="TODO" />

    <ImageButton
        android:id="@+id/btn_img_galery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_img_camera"
        android:layout_toEndOf="@+id/btn_img_camera"
        app:srcCompat="@drawable/ic_collections_black_48dp"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/tx_name_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_img_galery"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="13dp"
        android:layout_toStartOf="@+id/btn_add_animal"
        android:ems="10"
        android:hint="@string/name_animal" />

    <EditText
        android:id="@+id/tx_biology_name_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tx_name_animal"
        android:layout_below="@+id/tx_name_animal"
        android:ems="10"
        android:hint="@string/biology_name" />

    <EditText
        android:id="@+id/tx_quantity_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tx_biology_name_animal"
        android:layout_below="@+id/tx_biology_name_animal"
        android:ems="10"
        android:hint="@string/quantity" />

    <EditText
        android:id="@+id/tx_total_price_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tx_quantity_animal"
        android:layout_below="@+id/tx_quantity_animal"
        android:ems="10"
        android:hint="@string/total_price" />

    <Button
        android:id="@+id/btn_add_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tx_name_animal"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:background="#265dc4"
        android:text="Save"
        android:textColor="#ffffff" />

</RelativeLayout>
